<resources>
    <string name="app_name">ResumeBuilder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">ContactInfo</string>
    <string name="menu_corecompetencies">core competencies</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_academic">Academic</string>

    <string name="menu_tech_skills">Technical Skills</string>
    <string name="menu_visa_status">Visa Status</string>
    <string name="menu_personal_experience">Personal Experience</string>

    <string name="brief_tech_skills">WHAT COMPUTER HARDWARE, SOFTWARE PACKAGES, AND COMPUTER LANGUAGES DO YOU KNOW?</string>

    <string name="note_tech_skills"> <b>NOTE</b>: You should be able to pass a technical test based on these. They are technologies you have used in your work or academic projects or have learned all you can on it and can answer in depth questions.
    If you are targeting system/network administrator roles, please detail hardware as well."</string>


    <string name="selected_item">Selected item:</string>


    <string name="menu_contact_name">Name:</string>
    <string name="menu_contact_phone">Phone:</string>
    <string name="menu_contact_address">Street Address:</string>
    <string name="menu_contact_email">Email Adrress:</string>
    <string name="menu_contact_linkedin">LinkedIn Profile:</string>

    <string name="brief_cool_projects">WHAT PROJECTS HAVE YOU DONE, START BY ADDING THE MOST RECENT ONES?</string>


</resources>
