<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"

            android:title="Home" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_tech_skills"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tech_skills" />
        <item
            android:id="@+id/nav_visa_status"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_visa_status" />
        <item
            android:id="@+id/nav_personal_experience"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_personal_experience" />
        <item
            android:id="@+id/nav_academic"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_academic" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
